<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_weight="0.8">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#173660" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/body_title_rectangle"
                        android:text="@string/tsync_sub_title1"
                        android:id="@+id/tv_sub_title1"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:textSize="15dp"
                        android:layout_marginBottom="-1dp"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>
                </LinearLayout>
                <kr.knetz.qn.app.v.h.ExpandableView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gridview_body_sub1"
                    android:stretchMode="columnWidth"
                    android:numColumns="2"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/body_title_rectangle"
                        android:text="@string/tsync_sub_title2"
                        android:id="@+id/tv_sub_title2"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:textSize="15dp"
                        android:layout_marginBottom="-1dp"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>
                </LinearLayout>
                <kr.knetz.qn.app.v.h.ExpandableView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gridview_body_sub2"
                    android:stretchMode="columnWidth"
                    android:numColumns="2"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/body_title_rectangle"
                        android:text="@string/tsync_sub_title3"
                        android:id="@+id/tv_sub_title3"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:textSize="15dp"
                        android:layout_marginBottom="-1dp"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>
                </LinearLayout>
                <kr.knetz.qn.app.v.h.ExpandableView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gridview_body_sub3"
                    android:stretchMode="columnWidth"
                    android:numColumns="2"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>